# SAM-VI

./: Readme.md  ReadmePL.md
python_app/: Clippy_Personality.py  Clippy_Personality_test.py  config.json  config_manager.py  control_menu.py  main.py  menu.py  overlay_utils.py  pet.py  prompt_menu.py
python_app/ai_core/: brain.py
python_app/assets/pets/Clippy/: personality.json
rust_core/: Cargo.toml
rust_core/src/: lib.rs
