[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
sysinfo = "0.30"
nvml-wrapper = "0.9"
once_cell = "1.19"
tokio = {version = "1", features = ["rt-multi-thread", "time", "macros"] }